--- a/TravelManagementSystem.MVC/Views/Trips/Details.cshtml
+++ b/TravelManagementSystem.MVC/Views/Trips/Details.cshtml
@@ -56,5 +56,5 @@
         <i class="bi bi-trash me-1"></i>Изтрий
     </button>
 
-    @await Html.PartialAsync("_TripModalDelete", Model)
+    @await Html.PartialAsync("~/Views/Shared/Modals/_TripModalDelete.cshtml", Model)
 </div>
