--- a/TravelManagementSystem.MVC/Views/Users/Details.cshtml
+++ b/TravelManagementSystem.MVC/Views/Users/Details.cshtml
@@ -69,8 +69,6 @@
         <i class="bi bi-trash me-1"></i>Изтриване
     </button>
 
-    @{
-        Html.RenderPartial("_UserModalDelete", Model);
-    }
+    @await Html.PartialAsync("~/Views/Shared/Modals/_UserModalDelete.cshtml", Model)
 
 </div>
