--- a/TravelManagementSystem.MVC/Views/Destinations/Details.cshtml
+++ b/TravelManagementSystem.MVC/Views/Destinations/Details.cshtml
@@ -22,7 +22,7 @@
             <dd class="col-sm-9">@Model.Description</dd>
 
             <dt class="col-sm-3"><i class="bi bi-geo me-1 text-primary"></i>Координати:</dt>
-            <dd class="col-sm-9">(@Model.Latitude:F6, @Model.Longitude:F6)</dd>
+            <dd class="col-sm-9">(@Model.Latitude.ToString("F6"), @Model.Longitude.ToString("F6"))</dd>
 
             <dt class="col-sm-3"><i class="bi bi-toggle-on me-1 text-primary"></i>Активна:</dt>
             <dd class="col-sm-9">
